<resources>
    <string name="app_name">caculator01</string>
    <string name="simple_calculator">Scientific Caculator</string>
    <string name="cancel">CE</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="clear">C</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="reciprocal">1/x</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">＝</string>

    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="power">^</string>

    <string name="euler">e</string>
    <string name="pi">pi</string>
    <string name="log">log</string>
    <string name="factorial">x!</string>
    <string name="bracket1">(</string>
    <string name="bracket2">)</string>
    <string name="history">history</string>
    <string name="ans">ans</string>

</resources>
